[project]
name = "producthunt-clone-backend"
version = "0.1.0"
description = "Backend for a ProductHunt clone using FastAPI."
authors = [
    {name = "Hernan Provoste",email = "hernanprovostev@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
